--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -26,7 +26,7 @@ debug/export_console_wrapper=1
 application/icon=""
 application/icon_interpolation=4
 application/bundle_identifier="com.sebastijanzindl.platformer"
-application/signature=""
+application/signature="ad-hoc"
 application/app_category="Games"
 application/short_version=""
 application/version=""
